first paste from codepen
i

--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <html>
 
+<style
+body {
+  font-family: system-ui;
+  background: #white;
+  color: lightgreen;
+  text-align: center;
+ text-decoration-line: overline;
+  text-shadow: 2px 2px 5px lightblue; 
 
-haiiii 
+  img{
+    width: 20%;
+    border-radius: 50%
+  }
+  
+  h1:hover {
+    color: lightblue 
+  } </style> 
+
+
+
+
+
+
+  
+
 
 
 
