--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@ body {
   } </style> 
 
 
-
-
+ <head>
+    <body>
+<h1> Mia Jarvis' Website</h1>
+      
+      <img src="https://nzbirdsonline.org.nz/sites/all/files/2X2A1697%20King%20Penguin%20bol.jpg"> 
 
 
   
