--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
 
   <head>
-    
-  </head>
-<style
+    <link rel="stylesheet" href="style.css">  </head>
+<style>
 body {
   font-family: system-ui;
   background: #white;
@@ -22,7 +21,7 @@ body {
   } </style> 
 
 
- <head>
+ 
     <body>
 <h1> Mia Jarvis' Website</h1>
       
