--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body {
       <nav>
       <center>
     <li><a href="index.html"> HOME </a></li>
-    <li><a href="secondpage.html"> DATA APP <a></li>
+    <li><a href="secondpage.html"> MY APPS <a></li>
         </nav>
         
         <center> 
